--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300ita‌​lic,400italic,500,500italic,700,700italic,900italic,900);
-
+@font-face {
+  font-family: 'Manrope';
+  src: url('../fonts/manrope/static/Manrope-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -21,5 +25,5 @@
 body {
   color: rgb(var(--foreground-rgb));
   background: rgb(240,240,250);
-  font-family: Roboto, sans-serif;
+  font-family: 'Manrope', sans-serif;
 }
